--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 					<div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
 						<p>Copyright &copy; 2020 Sarvesh Hiwase Created With Emotion
                         
-                        . Designed by <a rel="nofollow noopener" href="https://templatemo.com">Bootstrap</a> &AMP; <a rel="nofollow noopener" href="https://templatemo.com">Font Awesome</a> </p>
+                        . Designed by <a rel="nofollow noopener" href="https://getbootstrap.com/">Bootstrap</a> &AMP; <a rel="nofollow noopener" href="https://fontawesome.com/">Font Awesome</a> </p>
 						<hr>
 						<ul class="social-icon">
 							<li><a href="#" class="fa fa-facebook"></a></li>
