--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="shortcut icon" href="https://previews.123rf.com/images/jovanas/jovanas1603/jovanas160301224/55926283-coder-sign-icon-glasses-icon-programmer-symbol.jpg" type="image/x-icon">
+		<link rel="shortcut icon" href="https://cdn4.iconfinder.com/data/icons/flaturici-set-2/512/code-512.png" type="image/x-icon">
 		<!-- animate -->
 		<link rel="stylesheet" href="css/animate.min.css">
 		<!-- bootstrap -->
